# bittle-walker

./: CMakeLists.txt  README.md  package.xml
config/: effort_joints.yaml  joints.yaml
launch/: gazebo.launch  gazebo_effort.launch  rviz.launch
rviz/: urdf.rviz
scripts/: joints_transfer.py
src/: quad_walk.cpp  quad_walk_effort.cpp  urdf_parser.cpp  zero_joints.cpp
urdf/: bittle.urdf  bittle.urdf.xacro  bittle_rviz.urdf.xacro  bittle_static.urdf
